# DW2

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  market_memory.md  mongodb_integration.md  report.md
dw_warehouse/: __init__.py  analytics.py  api.py  cli.py  config.py  env_config.py  history.py  ingest.py  market_memory.py  mcp_server.py  mongodb_adapter.py  mongodb_sync.py  repository.py  spark_analytics.py  store.py
frontend/: app.js  index.html  style.css
scripts/: market_memory_examples.py  mcp_client_demo.py  mongodb_examples.py  seed_demo.py
tests/: test_warehouse.py
