[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-vault-dwh"
version = "0.1.0"
description = "Append-only financial markets data warehouse"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
aurora-dw = "dw_warehouse.cli:main"

[tool.setuptools.packages.find]
include = ["dw_warehouse*"]
